# fastapi-withOpenaiAPI

./: .env.example  .gitignore  Dockerfile  README.md  Sprint3_Integration_Guide.md  cleanup_firestore.py  docker-compose.yml  pyproject.toml  render.yaml
app/: __init__.py  config.py  dependencies.py  endpoint.py  main.py  openai_service.py  schemas.py
app/models/: __init__.py  analysis.py  response.py
app/routers/: __init__.py  analysis.py  responses.py
app/schemas/: __init__.py  analysis.py  responses.py
app/services/: __init__.py  analysis_service.py  llm_service.py  pdf_service.py  response_service.py  store.py
app/utils/: __init__.py  exceptions.py  prompts.py
tests/: __init__.py  conftest.py  live_e2e_test.py  live_firestore_e2e.py  test_analysis.py  test_auth.py  test_llm_service.py  test_responses.py
