[project]
name = "watheeq-ai-service"
version = "1.0.0"
description = "AI-powered health insurance claims analysis microservice for Watheeq AI platform — Sprint 3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
firebase = ["firebase-admin>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
